# ogadf-schema

./: .flake8  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py  test_fact_file.py  test_magic_file.py
.github/workflows/: ci.yml  deploy.yml
ogadf_schema/: common_headers.py  events.py  irfs.py
