[tool.poetry]
name = "ogadf_schema"
# the minor version should reference the version of the schema it checks
version = "0.2.4.post1"
description = "Schema definitions for the Data Formats For Gamma-Ray Astronomy"
authors = ["Maximilian Nöthe <maximilian.noethe@tu-dortmund.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fits-schema = "^0.5.4"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
pytest-cov = "^2.8"
ipython = "^7.13.0"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core>=1.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
